--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^0.27.2",
+    "firebase": "^9.10.0",
+    "form-data": "^4.0.0",
     "js-base64": "^3.7.2",
     "line-awesome": "^1.3.0",
     "react": "^18.2.0",
