--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # REACT_APP_BUCKET_URL = "gs://public-lib-9c3f4.appspot.com"
 
-REACT_APP_API_URL = "http://localhost:8081/api"
+REACT_APP_API_URL = "http://127.0.0.1:5051/api/v6"
 
-REACT_APP_BUCKET_URL = "gs://beacon-hostels.appspot.com"
+REACT_DATABASE_URL = "gs://beacon-hostels.appspot.com"
 REACT_APP_API_KEY = "AIzaSyBT62_eGPZNIHnQ_4eMp87rKKeRI-dhfJA"
 REACT_APP_AUTH_DOMAIN = "beacon-hostels.firebaseapp.com"
 REACT_APP_PROJECT_ID = "beacon-hostels"
